# aegle

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  debug_memory.py  gzip_patches.sh  index.html  pyproject.toml  readme.md  requirements-gpu.txt  run.sh  run_analysis_ft.sh  run_analysis_swat.sh  run_analysis_uterus.sh  run_main_ft.sh  run_main_ovary.sh  run_main_test.sh  run_main_uterus.sh  run_pca_sweep_ft_0.sh  run_pca_sweep_uterus_0.sh  run_pca_sweep_uterus_1.sh  run_pca_sweep_uterus_2.sh  run_pca_sweep_uterus_3.sh  run_preprocess_ft.sh  run_preprocess_ovary.sh  run_preprocess_uterus.sh  run_tissue_extraction_ft.sh  setup.py  sitemap.xml  test_seg_ana.sh
aegle/: __init__.py  cell_profiling.py  codex_image.py  codex_patches.py  data_loading.py  datasink.py  env_info.py  evaluation.py  evaluation_func.py  extract_features.py  extract_features_gpu.py  gpu_utils.py  logging_config.py  memory_monitor.py  metadata.py  patching.py  pipeline.py  preprocessing.py  qc_filter_cells.py  quick_evaluation.py  repair_masks.py  repair_masks_gpu.py  repair_masks_gpu_mismatch.py  repair_masks_gpu_morphology.py  repair_masks_gpu_overlap.py  report_generator.py  seg_eval.py  segment.py  single_method_eval.py  tiff_handler.py  visualization.py  visualization_segmentation.py
aegle-docs/: DEPLOYMENT.md  MERMAID_SETUP.md  README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
aegle_analysis/: analysis_annotator.py  analysis_handler.py  gpu_utils.py  llm_smoketest.py  run_annotator.sh
config/: config.yaml
diagrams/: pipeline-workflow.mmd
exps/: README.md  (+13 more)
(+934 files in other folders)
